remove mesh.xml files

--- a/notebook/Stokes_experiments.ipynb
+++ b/notebook/Stokes_experiments.ipynb
@@ -35,8 +35,8 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9824efa580>,\n",
-       " <matplotlib.lines.Line2D at 0x7f9824efa8e0>]"
+       "[<matplotlib.lines.Line2D at 0x7fe884b7b460>,\n",
+       " <matplotlib.lines.Line2D at 0x7fe884b7b7c0>]"
       ]
      },
      "execution_count": 2,
@@ -57,11 +57,11 @@
     }
    ],
    "source": [
-    "vertices = np.loadtxt('mesh_vertices.txt')\n",
-    "cells = np.loadtxt('mesh_cells.txt', dtype=int)\n",
-    "dof_coords = np.loadtxt('dof_coords.txt')\n",
-    "vertex_in_dof = np.loadtxt('vertex_in_dof.txt', dtype=int)\n",
-    "dof_in_vertex = np.loadtxt('dof_in_vertex.txt', dtype=int)\n",
+    "vertices = np.loadtxt('../data/mesh_vertices.txt')\n",
+    "cells = np.loadtxt('../data/mesh_cells.txt', dtype=int)\n",
+    "dof_coords = np.loadtxt('../data/dof_coords.txt')\n",
+    "vertex_in_dof = np.loadtxt('../data/vertex_in_dof.txt', dtype=int)\n",
+    "dof_in_vertex = np.loadtxt('../data/dof_in_vertex.txt', dtype=int)\n",
     "\n",
     "mesh_meshio = meshio.Mesh(vertices, [(\"triangle\", cells)])\n",
     "mesh_meshio.write(\"mesh.xml\")\n",
@@ -76,9 +76,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Hdgn = np.loadtxt('Hdgn_array.txt')\n",
-    "sqrtR = sio.loadmat('sqrtR_matrix.mat')['sqrtR']\n",
-    "M = sio.loadmat('mass_matrix.mat')['M']\n",
+    "Hdgn = np.loadtxt('../data/Hdgn_array.txt')\n",
+    "sqrtR = sio.loadmat('../data/sqrtR_matrix.mat')['sqrtR']\n",
+    "M = sio.loadmat('../data/mass_matrix.mat')['M']\n",
     "# mass_lumps = np.loadtxt('mass_matrix_diagonal.txt')\n",
     "mass_lumps = M * np.ones(M.shape[1])\n",
     "\n",
