more directory and gitignore stuff

--- a/notebook/Stokes_experiments.ipynb
+++ b/notebook/Stokes_experiments.ipynb
@@ -64,8 +64,8 @@
     "dof_in_vertex = np.loadtxt('../data/dof_in_vertex.txt', dtype=int)\n",
     "\n",
     "mesh_meshio = meshio.Mesh(vertices, [(\"triangle\", cells)])\n",
-    "mesh_meshio.write(\"mesh.xml\")\n",
-    "mesh = dl.Mesh(\"mesh.xml\")\n",
+    "mesh_meshio.write(\"../tmp/mesh.xml\")\n",
+    "mesh = dl.Mesh(\"../tmp/mesh.xml\")\n",
     "dl.plot(mesh)"
    ]
   },
@@ -893,16 +893,16 @@
     "display = True\n",
     "\n",
     "ct = lpsf.build_cluster_tree_from_dof_coords(list(dof_coords), 32)\n",
-    "lpsf.visualize_cluster_tree(ct, \"cluster_tree\")\n",
+    "lpsf.visualize_cluster_tree(ct, \"../figures/cluster_tree\")\n",
     "\n",
     "bct = lpsf.build_block_cluster_tree(ct, ct, 2.0)\n",
-    "lpsf.visualize_block_cluster_tree(bct, \"block_cluster_tree\")\n",
+    "lpsf.visualize_block_cluster_tree(bct, \"../figures/block_cluster_tree\")\n",
     "\n",
     "Ker_hmatrix = lpsf.build_lpsfkernel_hmatrix(lpsf_kernel, bct, \n",
     "                                            shift_method, scaling_method,\n",
     "                                            hmatrix_tol, display)\n",
     "\n",
-    "lpsf.visualize_hmatrix(Ker_hmatrix, \"kernel_hmatrix\")"
+    "lpsf.visualize_hmatrix(Ker_hmatrix, \"../figures/kernel_hmatrix\")"
    ]
   },
   {
@@ -1463,7 +1463,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sio.savemat('all_kernel_approximations.mat', \n",
+    "sio.savemat('../tmp/all_kernel_approximations.mat', \n",
     "            {'K_true' : B_true,\n",
     "             'all_K_approximations' : all_B,\n",
     "             'all_num_batches' : all_nB,\n",
