--- a/notebook/unit_square_mesh.ipynb
+++ b/notebook/unit_square_mesh.ipynb
@@ -21,7 +21,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f4be6985b80>]"
+       "[<matplotlib.lines.Line2D at 0x7f77d7342b80>]"
       ]
      },
      "execution_count": 2,
@@ -106,11 +106,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "36f74854",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "err_verts= 0.0\n",
+      "err_cells= 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from localpsfcpp import make_unit_square_mesh\n",
+    "\n",
+    "vertices2, cells2 = make_unit_square_mesh(nx, ny)\n",
+    "\n",
+    "err_verts = np.linalg.norm(vertices2 - vertices) / np.linalg.norm(vertices)\n",
+    "print('err_verts=', err_verts)\n",
+    "\n",
+    "err_cells = np.linalg.norm(cells2 - cells) / np.linalg.norm(cells)\n",
+    "print('err_cells=', err_cells)"
+   ]
   }
  ],
  "metadata": {
